--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -196,40 +196,33 @@ jobs:
       # Checkout code from git
       - checkout
       # Add ssh keys with fingerprint
-      # - run: 
-      #     name: Add SSH
-      #     command: |
-      #       apk add --update openssh-client git
+      - run: 
+          name: Add SSH
+          command: |
+            apk add --update openssh-client git
       
       - add_ssh_keys:
           fingerprints: ["76:9e:73:d0:89:bd:3b:b3:dd:5c:99:17:6f:17:2b:13"] 
       # attach workspace
+      - attach_workspace:
+          at: ~/
 
       - run:
           name: Install dependencies
           command: |
             # Your code here
-            apk add --update --no-cache tar gzip ansible aws-cli
+            # apk add --update --no-cache tar gzip ansible aws-cli
+            apk add --update ansible
+            pip install awscli
 
-      - attach_workspace:
-          at: ~/
+      
 
       - run:
           name: Configure server
           command: |
-            echo ENVIRONMENT=production > backend/.env
-            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> backend/.env
-            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> backend/.env
-            echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> backend/.env
-            echo TYPEORM_HOST=$TYPEORM_HOST >> backend/.env
-            echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> backend/.env
-            echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> backend/.env
-            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> backend/.env
-            echo TYPEORM_PORT=$TYPEORM_PORT >> backend/.env
-            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> backend/.env
-            cat backend/.env
+            
             cd .circleci/ansible
-            ansible-playbook -i inventory.txt configure-server.yml
+            ansible-playbook configure-server.yml -i inventory.txt
           
           no_output_timeout: 10m
       - persist_to_workspace:
