--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -191,7 +191,7 @@ jobs:
   configure-infrastructure:
     docker:
       # Docker image here that supports Ansible
-      - image: python:3.7-alpine3.16
+      - image: python:3.7-alpine3.11
     steps:
       # Checkout code from git
       - checkout
@@ -211,11 +211,11 @@ jobs:
           name: Install dependencies
           command: |
             # Your code here
-            # apk add --update --no-cache tar gzip ansible aws-cli
-            apk add --update ansible
-            pip install awscli
 
-      
+            apk add --update --no-cache tar gzip ansible aws-cli
+
+            # apk add --update ansible
+            # pip install awscli
 
       - run:
           name: Configure server
@@ -358,7 +358,7 @@ jobs:
             then 
               return 0; 
             else 
-              return 0; 
+              return 1; 
             fi
       - run:
           name: Frontend smoke test.
@@ -368,7 +368,7 @@ jobs:
             if 
               curl ${URL} | grep "Welcome"; 
             then 
-              return 0; 
+              return 1; 
             else 
               return 1; 
             fi
