--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           command: |
             cd frontend
             npm install 
-            npm audit fix
+            npm audit fix --audit-level=critical --force
             npm run build
       - save_cache:
           paths: [frontend/node_modules]
@@ -83,7 +83,7 @@ jobs:
           name: Back-end build
           command: |
             cd backend
-            sudo npm install  -g npm@8.17.0
+            sudo npm install -g npm
             npm run build
       - save_cache:
           paths: [backend/node_modules]
