--- a/.circleci/files/cloudfront.yml
+++ b/.circleci/files/cloudfront.yml
@@ -1,10 +1,5 @@
 Description: >
-  Cloudfront distribution for UdaPeople by philip 
-  with: 
-    aws cloudformation deploy \
-         --template-file cloudfront.yml \
-         --stack-name InitialStack\
-         --parameter-overrides WorkflowID=udapeople-philip123
+  Cloudfront distribution for UdaPeople.
 
 Parameters:
   WorkflowID:
@@ -43,10 +38,3 @@ Outputs:
     Description: URL for website hosted on S3
     Export:
       Name: WorkflowID
-
-
-
-
-
-
- 
