--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,6 +67,7 @@ jobs:
           command: |
             cd backend
             npm install
+            npm audit fix
             npm run build
       - save_cache:
           paths: [backend/node_modules]
@@ -84,6 +85,7 @@ jobs:
           command: |
             cd frontend
             npm install
+            npm audit fix
             npm run test
 
   test-backend:
