--- a/.circleci/files/cloudfront.yml
+++ b/.circleci/files/cloudfront.yml
@@ -1,6 +1,9 @@
 Description: >
-  Cloudfront distribution for UdaPeople.
-
+  Cloudfront distribution for UdaPeople. Create with 
+  aws cloudformation deploy \
+    --template-file cloudfront.yml \
+    --stack-name initialStack \
+    --parameter-overrides WorkflowID=udapeople-philip11 
 Parameters:
   WorkflowID:
     Description: Unique identifier.
