--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,21 +29,22 @@ commands:
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
-    # parameters:
-      # Add parameter here     
+    parameters:
+      # Add parameter here
+      workflow_id:
+         type: string     
     steps:
       - run:
           name: Revert migrations
-          # Add when this will run
+          when: on_fail
           command: |
-            # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = 1
-            if(( $SUCCESS==1 )); 
+            SUCCESS=$(curl --insecure  https://kvdb.io/PAoQYQLoYwE4vhdNEXg58a/migration_${CIRCLE_WORKFLOW_ID:0:7})
+            if (($SUCCESS == 1))
             then
-            #  cd ~/project/backend
-            #  npm install
-            #  Add revert code here. You can find this in the Getting Started section.
-              exit 1
+              cd ~/project/backend
+              npm install
+              npm run build
+              npm run migrations:revert
             fi
     
             
@@ -298,7 +299,7 @@ jobs:
       # Add ssh keys with fingerprint
       - add_ssh_keys:
         fingerprints:
-            - "a6:3f:75:c1:34:1f:c7:8d:42:cc:c4:4a:61:55:1c:88"
+          - "a6:3f:75:c1:34:1f:c7:8d:42:cc:c4:4a:61:55:1c:88"
       # attach workspace
       - attach_workspace:
           at: ~/
@@ -345,57 +346,57 @@ jobs:
 
   
 
-  # smoke-test:
-  #   docker:
-  #     # Lightweight Docker image
-  #     - image: python:3.10-alpine3.16 
-  #   steps:
-  #     # Checkout code from git
-  #     - checkout
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           apk add --update --no-cache tar gzip nodejs npm curl aws-cli
-  #     - run:
-  #         name: Get backend url and Backend smoke test.
-  #         command: |
-  #           export BACKEND_IP=$(aws ec2 describe-instances \
-  #           --query "Reservations[*].Instances[*].[PublicIpAddress]" \
-  #           --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-  #           --output text)
-  #           echo ${BACKEND_IP}
+  smoke-test:
+    docker:
+      # Lightweight Docker image
+      - image: python:3.10-alpine3.16 
+    steps:
+      # Checkout code from git
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update --no-cache tar gzip nodejs npm curl aws-cli
+      - run:
+          name: Get backend url and Backend smoke test.
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances \
+            --query "Reservations[*].Instances[*].[PublicIpAddress]" \
+            --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --output text)
+            echo ${BACKEND_IP}
             
-  #           export BACKEND=$(echo $BACKEND_IP | grep -o '[^ ]*$')
+            export BACKEND=$(echo $BACKEND_IP | grep -o '[^ ]*$')
             
-  #           echo $BACKEND
-  #           export API_URL="http://${BACKEND}:3030"
-  #           echo "API_URL=${API_URL}"
-  #           echo "Sleeping for 1 minute"
-  #           sleep 60
-  #           if curl -v "${API_URL}/api/status" | grep "ok"
-  #           then
-  #             return 0
-  #           else
-  #             return 1
-  #           fi 
-  #     - run:
-  #         name: Frontend smoke test.
-  #         command: |
-  #           URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
-  #           echo ${URL}
+            echo $BACKEND
+            export API_URL="http://${BACKEND}:3030"
+            echo "API_URL=${API_URL}"
+            echo "Sleeping for 1 minute"
+            sleep 60
+            if curl -v "${API_URL}/api/status" | grep "ok"
+            then
+              return 0
+            else
+              return 1
+            fi 
+      - run:
+          name: Frontend smoke test.
+          command: |
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
+            echo ${URL}
             
-  #           if curl -s ${URL} | grep "Welcome"
-  #           then
-  #             # Change this to 0 after the job fails
-  #             return 0
-  #           else
-  #             return 1
-  #           fi
+            if curl -s ${URL} | grep "Welcome"
+            then
+              # Change this to 0 after the job fails
+              return 0
+            else
+              return 1
+            fi
       
-  #     - destroy-environment:
-  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-  #     - revert-migrations:
-  #           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}  
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}  
 
 #   cloudfront-update:
 #     docker:
@@ -458,8 +459,8 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
-      # - smoke-test:
-      #     requires: [deploy-backend, deploy-frontend]
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
       #     requires: [smoke-test]
       # - cleanup:
